Added nparray_to_image function

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 *.png
 *.jpg
 *.pyc
+*.so
+*.a
 old/
 mnist/
 data/
@@ -17,6 +19,7 @@ decaf/
 submission/
 cfg/
 darknet
+obj/
 .fuse*
 
 # OS Generated #
